<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_password">Reset password</string>
    <string name="name_hint">Name</string>
    <string name="lastname_hint">Lastname</string>
    <string name="age_hint">Age</string>
    <string name="message_successfully_sent">Message successfully sent</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="you_must_be_at_least_16_years_old">You must be at least 16 years old</string>
    <string name="incorrect_age_specified">Incorrect age specified</string>
    <string name="input_your_message_hint">Input your message</string>
</resources>